# smart-pot

./: .gitattributes  .gitignore  README.md
PostmanTests/: SmartPot.postman_collection.json
backend/: README.md  pyproject.toml
backend/app/: TODO.md  main.py
backend/app/api/: auth.py  pots.py  user.py
backend/app/domain/: hard_reset_handler.py  start_handlers.py  telemetry_handler.py  watering_handler.py
backend/app/integrations/db/: client.py
backend/app/integrations/mqtt/: MQTTClient.py
backend/app/integrations/repositories/: auth.py  pots.py
backend/app/schemas/: pots.py  user.py
backend/app/schemas/mqtt/: pots.py
backend/app/utils/: jwt_token.py  mqtt_password.py
docs/: README.md
firmware/: README.md
firmware/all_sensors/: .gitignore  CMakeLists.txt  features.md  fsm.puml  notatki.md  partitions.csv
firmware/all_sensors/components/managers/fsm_manager/: CMakeLists.txt
firmware/all_sensors/components/managers/fsm_manager/include/: fsm_manager.h  fsm_state_callbacks.h
firmware/all_sensors/components/managers/fsm_manager/src/: fsm_manager.c  fsm_state_callbacks.c  state_calib_soil_dry.c  state_calib_soil_wet.c  state_data_decision.c  state_deep_sleep.c  state_factory_reset.c  state_flash_store.c  state_idle.c  state_init.c  state_mqtt_publish.c  state_provisioning.c  state_sensing.c  state_sync_time.c  state_wifi_connect.c
infra/: README.md  docker-compose.yaml
infra/app/: Dockerfile  requirements.txt  start.sh
infra/backend/: Dockerfile  start.sh
infra/mosquitto/: Dockerfile  README.md  entrypoint.sh
mobile/: .gitignore  README.md  pubspec.yaml
mobile/ios/: Podfile
scripts/: README.md
(+128 files in other folders)
